SCRUM-96 Update wlasl2landmakrs demo and remove global requirements.txt

--- a/preprocessing/wlasl2landmarks.ipynb
+++ b/preprocessing/wlasl2landmarks.ipynb
@@ -214,34 +214,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "2025-03-26 22:23:00,625 - MainThread - INFO - MediaPipe solutions initialized for hand, pose, and face landmarks.\n",
-            "2025-03-26 22:23:00,628 - MainThread - INFO - Metadata file found at ..\\datasets\\WLASL_parsed_metadata.json. Loading existing metadata.\n",
-            "2025-03-26 22:23:00,682 - MainThread - INFO - Loaded metadata with 21083 entries.\n"
-          ]
-        }
-      ],
-      "source": [
-        "from wlasl2landmarks import WLASLLandmarksExtractor\n",
-        "extractor = WLASLLandmarksExtractor(\n",
-        "    risangbaskoro_videos_dir='../datasets/wlasl-processed/videos',\n",
-        "    sttaseen_videos_dir='../datasets/wlasl2000-resized/wlasl-complete/videos',\n",
-        "    metadata_path='../datasets/WLASL_parsed_metadata.json',\n",
-        "    filtered_hand=filtered_hand,\n",
-        "    filtered_pose=filtered_pose,\n",
-        "    filtered_face=filtered_face,\n",
-        "    use_adaptive_sampling=False,\n",
-        ")"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "colab": {
@@ -269,9 +241,7 @@
       "source": [
         "from wlasl2landmarks import WLASLLandmarksExtractor\n",
         "extractor = WLASLLandmarksExtractor(\n",
-        "    risangbaskoro_videos_dir='../datasets/wlasl-processed/videos',\n",
-        "    sttaseen_videos_dir='../datasets/wlasl2000-resized/wlasl-complete/videos',\n",
-        "    metadata_path='../datasets/WLASL_parsed_metadata.json',\n",
+        "    clearml_raw_dataset_id='921fdb13ed94464ebcf0dd0586856a5c',\n",
         "    filtered_hand=filtered_hand,\n",
         "    filtered_pose=filtered_pose,\n",
         "    filtered_face=filtered_face,\n",
@@ -762,9 +732,7 @@
         "id": "5D9HpHlW5bkQ"
       },
       "source": [
-        "### Extract landmarks for each video in WLASL\n",
-        "\n",
-        "> This will take days, very very long time"
+        "### Extract landmarks for each video in WLASL"
       ]
     },
     {
@@ -787,10 +755,8 @@
         }
       ],
       "source": [
-        "extractor.extract_wlasl_landmarks(\n",
-        "    output_dir='../datasets/WLASL_landmarks',\n",
-        "    final_npz_path='../datasets/WLASL_landmarks.npz'\n",
-        ")"
+        "# This will take days, very very long time\n",
+        "extractor.extract_wlasl_landmarks()"
       ]
     }
   ],
